<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/epic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/epic" />

    <Button
        android:id="@+id/liric"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/epic"
        android:layout_centerHorizontal="true"
        android:text="@string/liric" />
    <Button
        android:id="@+id/dramatic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/liric"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/dramatic" />
    <Button
        android:id="@+id/settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/dramatic"
        android:layout_centerHorizontal="true"
        android:text="@string/settings" />
    <Button
        android:id="@+id/test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/settings"
        android:layout_centerHorizontal="true"
        android:text="@string/test"/>

</RelativeLayout>