<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityHarap">

    <Button
        android:id="@+id/albtema"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/albcaract"
        android:layout_centerHorizontal="true"
        android:text="@string/albtema" />
    <Button
        android:id="@+id/albcaract"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/albrel"
        android:layout_centerHorizontal="true"
        android:text="@string/albcaract" />

    <Button
        android:id="@+id/albrel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:text="@string/albrel" />

</RelativeLayout>