<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityMoara">

    <Button
        android:id="@+id/moaratema"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/moaracaract"
        android:layout_centerHorizontal="true"
        android:text="@string/moaratema" />
    <Button
        android:id="@+id/moaracaract"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/moararel"
        android:layout_centerHorizontal="true"
        android:text="@string/moaracaract" />

    <Button
        android:id="@+id/moararel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:text="@string/moararel" />

</RelativeLayout>