<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityBaltag">

    <Button
        android:id="@+id/baltagtema"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/baltagcaract"
        android:layout_centerHorizontal="true"
        android:text="@string/baltagtema" />
    <Button
        android:id="@+id/baltagcaract"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/baltagrel"
        android:layout_centerHorizontal="true"
        android:text="@string/baltagcaract" />

    <Button
        android:id="@+id/baltagrel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:text="@string/baltagrel" />

</RelativeLayout>