<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityEliade">

    <Button
        android:id="@+id/eliadetema"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/eliadecaract"
        android:layout_centerHorizontal="true"
        android:text="@string/eliadetema" />
    <Button
        android:id="@+id/eliadecaract"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/eliaderel"
        android:layout_centerHorizontal="true"
        android:text="@string/eliadecaract" />

    <Button
        android:id="@+id/eliaderel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:text="@string/eliaderel" />

</RelativeLayout>