<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityEnigma">

    <Button
        android:id="@+id/enigmatema"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/enigmacaract"
        android:layout_centerHorizontal="true"
        android:text="@string/enigmatema" />
    <Button
        android:id="@+id/enigmacaract"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/enigmarel"
        android:layout_centerHorizontal="true"
        android:text="@string/enigmacaract" />

    <Button
        android:id="@+id/enigmarel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:text="@string/enigmarel" />

</RelativeLayout>