<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityUltima">

    <Button
        android:id="@+id/ultimatema"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/ultimacaract"
        android:layout_centerHorizontal="true"
        android:text="@string/ultimatema" />
    <Button
        android:id="@+id/ultimacaract"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/ultimarel"
        android:layout_centerHorizontal="true"
        android:text="@string/ultimacaract" />

    <Button
        android:id="@+id/ultimarel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:text="@string/ultimarel" />

</RelativeLayout>