<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityMorometii">

    <Button
        android:id="@+id/morometiitema"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/morometiicaract"
        android:layout_centerHorizontal="true"
        android:text="@string/morometiitema" />
    <Button
        android:id="@+id/morometiicaract"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/morometiirel"
        android:layout_centerHorizontal="true"
        android:text="@string/morometiicaract" />

    <Button
        android:id="@+id/morometiirel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:text="@string/morometiirel" />

</RelativeLayout>